; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm64/arm64/extr_gicv3_its.c_its_quirk_cavium_22375.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm64/arm64/extr_gicv3_its.c_its_quirk_cavium_22375.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gicv3_its_softc = type { i32 }

@ITS_FLAGS_ERRATA_CAVIUM_22375 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @its_quirk_cavium_22375 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @its_quirk_cavium_22375(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.gicv3_its_softc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.gicv3_its_softc* @device_get_softc(i32 %4)
  store %struct.gicv3_its_softc* %5, %struct.gicv3_its_softc** %3, align 8
  %6 = load i32, i32* @ITS_FLAGS_ERRATA_CAVIUM_22375, align 4
  %7 = load %struct.gicv3_its_softc*, %struct.gicv3_its_softc** %3, align 8
  %8 = getelementptr inbounds %struct.gicv3_its_softc, %struct.gicv3_its_softc* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = or i32 %9, %6
  store i32 %10, i32* %8, align 4
  ret void
}

declare dso_local %struct.gicv3_its_softc* @device_get_softc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
